Add update 3d models controller